<resources>
    <string name="app_name">IUM</string>
    <string name="welcomeActivity_headline">Welcome</string>
    <string name="cardViewTitle">CardView</string>
    <string name="cardViewContent">CardView Content</string>
    <string name="cardViewGuest">Guest</string>
    <string name="cardViewLogIn">Log in</string>
    <string name="mainTitle">Main Activity</string>
    <string name="navigation_header_username">User Name</string>
    <string name="navigation_item">Item</string>
    <string name="searchHint">Search Hint</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="navigation_header_usertag">\@usertag</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="post">Post</string>
    <string name="mainPage_date">19:20</string>
    <string name="mainPage_Content">main page content</string>
    <string name="login_Title">Login</string>
    <string name="userNameHint">User Name</string>
    <string name="userPassHint">Password</string>
    <string name="loginButton">Enter</string>
    <string name="login_Show">Show</string>
    <string name="login_Hide">Hide</string>

    <string-array name="user_option">
        <item>Main Page</item>
        <item>My Favorite</item>
        <item>Download</item>
    </string-array>

    <string-array name="user_icon">
        <item>home_focused</item>
        <item>favorite_focused</item>
        <item>download</item>
    </string-array>
</resources>
