<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/welcomeCardView"
    app:cardUseCompatPadding="true"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cardViewConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/cardViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardViewTitle"
            app:layout_constraintBottom_toTopOf="@+id/cardViewImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="32sp"/>

        <ImageView
            android:id="@+id/cardViewImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/cardViewContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewTitle"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/cardViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewImage"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cardViewContent"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/cardViewLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardViewLogIn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cardViewGuest"
            android:visibility="gone"/>

        <Button
            android:id="@+id/cardViewGuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cardViewGuest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardViewLogIn"
            android:visibility="gone"/>


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>