<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainPage"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/mainPage_Image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/mainPage_UserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/mainPage_Image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/navigation_header_username"
        android:textSize="@dimen/mainPage_userName"
        android:fontFamily="@font/roboto_condensed_family"
        android:textStyle="bold"
        android:textColor="@color/colorUserName"/>

    <TextView
        android:id="@+id/mainPage_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/mainPage_Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainPage_UserName"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/mainPage_date"
        android:textSize="@dimen/mainPage_date"
        android:fontFamily="@font/roboto_condensed_family"
        android:textColor="@color/colorUserTag"/>

    <TextView
        android:id="@+id/mainPage_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/mainPage_Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainPage_date"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/mainPage_Content"
        android:textSize="@dimen/mainPage_content"
        android:fontFamily="@font/roboto_condensed_family"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:gravity="top"/>


    <View
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/colorShadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</android.support.constraint.ConstraintLayout>